--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Vytas</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
     <div class="main-container">
-        <img src="images/cloud.png" alt="cloud">
-        <img src="images/cloud.png" alt="cloud">
-        <img src="images/cloud.png" alt="cloud">
-        <img src="images/mountain.png" alt="mountain">
+        <img class="cloud cloud1" src="images/cloud.png" alt="cloud">
+        <img class="cloud cloud2" src="images/cloud.png" alt="cloud">
+        <img class="cloud cloud3" src="images/cloud.png" alt="cloud">
+        <img class="mountain" src="images/mountain.png" alt="mountain">
         <h1>Let the Adventure Begin</h1>
     </div>
 </body>
